added Chicago and Washington DC

--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -23,7 +23,7 @@
           <div class="col s4">
             <div class="card small">
                 <div class="card-image waves-effect waves-block waves-light">
-                    <img class="activator" src="assets/images/cards/newyorkcity.jpg">
+                    <img class="activator" src="assets/images/cards/timesSquare.jpg">
                 </div>
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">New York<i class="material-icons right">more_vert</i></span>
@@ -67,13 +67,42 @@
                 </div>
             </div>
         </div>
-
-
-        
-
-
-        </div>
-
+        </div> <!-- end of first row -->
+        <!-- second row -->
+        <div class="row">
+        <!-- Illinois -->
+          <div class="col s4">
+            <div class="card small">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="assets/images/cards/chicago.jpg">
+                </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Illinois<i class="material-icons right">more_vert</i></span>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Illinois<i class="material-icons right">close</i></span>
+                    <p class="city-description">New York City is known for its fast-paced, around-the-clock lifestyle, which may be overwhelming for newcomers. Known as "the city that never sleeps," this relentless metropolis draws those seeking to advance their careers and push their limits. People come to New York to pursue their dreams, achieve a better life and test the adage "if you can make it here, you can make it anywhere."</p>
+                    <a href="/Illinois"><p id="illinois">Select</p></a>
+                </div>
+             </div>
+            </div>
+            <!-- Washington DC -->
+            <div class="col s4">
+                <div class="card small">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/cards/washingtonDC.jpg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Washington DC<i class="material-icons right">more_vert</i></span>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Washington DC<i class="material-icons right">close</i></span>
+                        <p class="city-description">Warm temperatures year-round, award-winning beaches. Flodia that's home to seven of the world's top theme parks, and welcomes around 60 million travelers each year, making it one of the most popular vacation destinations in America.</p>
+                        <a href="/WashingtonDC"><p id="washingtondc">Select</p></a>
+                    </div>
+                </div>
+            </div>
+          </div> <!-- end of second row -->
     </div>
 
     <script>
