--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
         <h1 id="homePageTitle">life is beautiful</h1>
         <p id="homePageText">Do your best to make the right choices!</p>
 
-        <!-- Modal Structure -->
+        <!-- Sign-in form -->
         <div id="modal1" class="modal">
             <div class="modal-content">
                 <h4>Life is Beautiful</h4>
