--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -1,7 +1,7 @@
 <nav>
 <div class='container'>
         <div class="nav-wrapper">
-          <a href="/" class="brand-logo">Life is Beautiful</a>
+          <a href="/" >Life is Beautiful</a>
           <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
             <li><a href="/">Logout</a></li>
@@ -46,7 +46,7 @@
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Florida<i class="material-icons right">close</i></span>
-                        <p class="city-description">Warm temperatures year-round, award-winning beaches. Flodia that's home to seven of the world's top theme parks, and welcomes around 60 million travelers each year, making it one of the most popular vacation destinations in America.</p>
+                        <p class="city-description">Warm temperatures year-round, award-winning beaches. Florida that's home to seven of the world's top theme parks, and welcomes around 60 million travelers each year, making it one of the most popular vacation destinations in America.</p>
                         <a href="/Florida"><p id="florida">Select</p></a>
                     </div>
                 </div>
