--- a/views/signUpApi.html
+++ b/views/signUpApi.html
@@ -126,6 +126,18 @@
                 citysearch(city);
             }); 
 
+           $('#Chicago').click(function(){
+                city = "Chicago";
+                localStorage.setItem('city', city);
+                citysearch(city);
+            }); 
+
+           $('#Washington,DC').click(function(){
+                city = "WashingtonDC";
+                localStorage.setItem('city', city);
+                citysearch(city);
+            }); 
+
            function citysearch(city){
             var queryURL = "http://api.openweathermap.org/data/2.5/weather?q="+city+"&units=imperial&appid=6aec4391886be38edb554739debf8733";
 
