change port case

--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -57,7 +57,7 @@
             <h5>Tell us about your plan!</h5>
             </div>
             <div class = 'row'>
-            <form action="/api/User" method="post">
+            <form action="www.google.com" method="get">
                 <fieldset>
                 <legend>Please complete</legend>
                     <label>
@@ -359,4 +359,5 @@
 
 <script src="https://cdn.rawgit.com/devbridge/jQuery-Autocomplete/master/dist/jquery.autocomplete.min.js" type="text/javascript" charset="utf-8"></script>
 
-<script type="text/javascript" src='/assets/js/autocomplete.js'></script>
+ <script type="text/javascript" src='/assets/js/autocomplete.js'></script>
+
