--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -31,7 +31,7 @@
                 <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">New York<i class="material-icons right">close</i></span>
                     <p class="city-description">New York City is known for its fast-paced, around-the-clock lifestyle, which may be overwhelming for newcomers. Known as "the city that never sleeps," this relentless metropolis draws those seeking to advance their careers and push their limits. People come to New York to pursue their dreams, achieve a better life and test the adage "if you can make it here, you can make it anywhere."</p>
-                    <a ><p id="newyork">Select</p></a>
+                    <a href="/Newyork"><p id="newyork">Select</p></a>
                 </div>
              </div>
             </div>
@@ -47,7 +47,7 @@
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Florida<i class="material-icons right">close</i></span>
                         <p class="city-description">Warm temperatures year-round, award-winning beaches. Florida that's home to seven of the world's top theme parks, and welcomes around 60 million travelers each year, making it one of the most popular vacation destinations in America.</p>
-                        <a ><p id="florida">Select</p></a>
+                        <a href="/Florida"><p id="florida">Select</p></a>
                     </div>
                 </div>
             </div>
